--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </div>
 
     <div class="container">
-      <div id="contenedor">
+        <div id="contenedor" class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
       </div>
     </div>
   </main>
